--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
 	<name>lab-padroes-projetos-spring</name>
 	<description>Exemplos de padrões de projetos em spring</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>17</java.version>
+		<openapi.version>1.6.9</openapi.version>
 		<spring-cloud.version>2021.0.3</spring-cloud.version>
 	</properties>
 	<dependencies>
